<resources>
    <string name="app_name">ChessClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="promote">Promote</string>
    <string name="input_name">Input name:</string>
    <string name="input_your_name">Input your name</string>
    <string name="name_example">Hieu Nguyen</string>
    <string name="submit">Submit</string>
    <string name="vs">VS</string>
    <string name="hello_s">Hello, %s</string>
    <string name="play_now">Play now</string>
    <string name="add_new_room">Add new room</string>
    <string name="no_room">No room</string>
    <string name="no_room_data">No room data</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="notice">Notice</string>
    <string name="are_you_sure_you_want_to_create_new_room">Are you sure you want to create new room?</string>
    <string name="find_room">Find room</string>
    <string name="search">Search</string>
    <string name="find">Find</string>
    <string name="input_ip_address">Input Ip address</string>
    <string name="ip_address">Ip address:</string>
    <string name="input_port">Input port</string>
    <string name="your_turn">Your turn</string>
    <string name="please_waiting">Please waiting</string>
    <string name="start_game">Start game</string>
    <string name="name_is_exist_please_input_another_name">Name is exist, please input another name</string>
    <string name="waiting_for_the_next_player">Waiting for the next player</string>
    <string name="choose_game_mode">Choose game mode</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="room_id">Room id</string>
    <string name="you_win">You win</string>
    <string name="you_lose">You lose</string>
    <string name="are_you_sure_you_want_to_leave_this_room">Are you sure you want to leave this room!</string>
    <string name="leave">Leave</string>
    <string name="robot">Robot</string>
    <string name="player_vs_robot">Player vs Robot</string>
    <string name="player_vs_player">Player vs Player</string>
    <string name="thu_xuan">Thu Xuan</string>
    <string name="kick">Kick</string>
    <string name="kick_the_opponent">Kick the opponent</string>
    <string name="level">Level:</string>
    <string name="chess_ai">Chess AI</string>
    <string name="name_must_be_not_contain_blank_and_between_6_and_30_characters">Name must be not contain blank and between 6 and 30 characters!</string>
</resources>
