<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/teal_700"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:padding="@dimen/dp_6"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_find_room"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="@dimen/dp_10"
            android:drawableTint="@color/colorWhite20"
            android:gravity="center_vertical"
            android:hint="@string/find_room"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/colorWhite20"
            android:textSize="@dimen/sp_18" />

        <Button
            android:id="@+id/bt_find_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/find" />

        <Button
            android:id="@+id/bt_play_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_now" />

    </LinearLayout>

</LinearLayout>
